feat: add test runtime settings